fix: text align issue hebrew language

--- a/apps/gauzy/src/app/pages/reports/all-report/all-report/all-report.component.scss
+++ b/apps/gauzy/src/app/pages/reports/all-report/all-report/all-report.component.scss
@@ -84,12 +84,10 @@ nb-card-body {
   font-weight: 600;
   line-height: 16px;
   letter-spacing: 0em;
-  text-align: left;
 }
 .report-name {
   font-size: 14px;
   font-weight: 600;
   line-height: 17px;
   letter-spacing: 0em;
-  text-align: left;
 }
